<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/bg_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.menu.MenuActivity">

    <ImageView
        android:id="@+id/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_tv_ic_back"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bar_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_judul_menu"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_close"
        app:layout_constraintStart_toEndOf="@id/ic_close"
        app:layout_constraintTop_toTopOf="@id/ic_close" />

    <View
        android:id="@+id/line_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.5"
        android:background="@color/grey_808080"
        app:layout_constraintTop_toBottomOf="@id/tv_bar_menu" />

    <TextView
        android:id="@+id/tv_nama_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins_semibold"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_bar"
        tools:text="@string/tv_nama_user" />

    <TextView
        android:id="@+id/tv_email_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_user"
        tools:text="@string/tv_email_user" />

    <TextView
        android:id="@+id/tv_riwayat_deteksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/desc_ic_riwayat"
        android:drawablePadding="14dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:text="@string/tv_riwayat_deteksi"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_riwayat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email_user" />

    <TextView
        android:id="@+id/tv_pengaturan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/desc_ic_pengaturan"
        android:drawablePadding="10dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:text="@string/tv_pengaturan"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_pengaturan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_riwayat_deteksi" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/desc_ic_logout"
        android:drawablePadding="15dp"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical"
        android:text="@string/tv_logout"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableLeftCompat="@drawable/ic_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pengaturan" />

</androidx.constraintlayout.widget.ConstraintLayout>