<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pengaturan.PengaturanActivity"
    style="@style/bg_body">

    <ImageView
        android:id="@+id/ic_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desc_tv_ic_back"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_bar_pengaturan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_judul_pengaturan"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/ic_back"
        app:layout_constraintStart_toEndOf="@id/ic_back"
        app:layout_constraintTop_toTopOf="@id/ic_back" />

    <View
        android:id="@+id/line_bar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:alpha="0.5"
        android:background="@color/grey_808080"
        app:layout_constraintTop_toBottomOf="@id/tv_bar_pengaturan" />

    <TextView
        android:id="@+id/tv_label_ganti_mode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_label_ganti_mode"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_bar" />

    <ImageView
        android:id="@+id/ic_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_light"
        android:contentDescription="@string/desc_ic__light"
        app:layout_constraintStart_toStartOf="@id/tv_label_ganti_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_label_ganti_mode"
        android:layout_marginTop="15dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_mode_latar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ic_light"
        app:layout_constraintBottom_toBottomOf="@id/ic_light"
        app:layout_constraintStart_toEndOf="@id/ic_light"
        android:layout_marginStart="10dp"
        android:thumb="@drawable/thumb_background"
        app:track="@drawable/track_background"/>

    <ImageView
        android:id="@+id/ic_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_dark"
        android:contentDescription="@string/desc_ic_dark"
        app:layout_constraintTop_toTopOf="@id/switch_mode_latar"
        app:layout_constraintBottom_toBottomOf="@id/switch_mode_latar"
        app:layout_constraintStart_toEndOf="@id/switch_mode_latar"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tv_label_ganti_bahasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/tv_label_ganti_bahasa"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_label_ganti_mode"
        app:layout_constraintTop_toBottomOf="@id/switch_mode_latar" />

    <TextView
        android:id="@+id/tv_ganti_bahasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_ganti_bahasa"
        app:drawableLeftCompat="@drawable/ic_bahasa"
        app:layout_constraintTop_toBottomOf="@id/tv_label_ganti_bahasa"
        app:layout_constraintStart_toStartOf="@id/tv_label_ganti_bahasa"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="16sp"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>