<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.lokasi.LokasiFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/tv_judul"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:layout_constraintEnd_toStartOf="@id/ic_pengaturan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ic_pengaturan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/desc_ic_pengaturan"
            android:src="@drawable/ic_pengaturan"
            app:layout_constraintBottom_toBottomOf="@id/tv_judul"
            app:layout_constraintEnd_toStartOf="@id/ic_menu"
            app:layout_constraintTop_toTopOf="@id/tv_judul" />

        <ImageView
            android:id="@+id/ic_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/desc_ic_menu"
            android:src="@drawable/ic_menu"
            app:layout_constraintBottom_toBottomOf="@id/tv_judul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_judul" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc_iv_poster"
            android:src="@drawable/iv_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_judul" />

        <TextView
            android:id="@+id/tv_deteksi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_deteksi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_poster" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_deteksi"
            style="@style/btn_green_rounded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingHorizontal="60dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_deteksi"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_deteksi" />

        <TextView
            android:id="@+id/tv_label_lokasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/tv_label_lokasi"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_deteksi" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cc_lokasi_daur_ulang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_label_lokasi"
            app:layout_constraintTop_toBottomOf="@id/tv_label_lokasi">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_recyclerview"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp">

                <ImageView
                    android:id="@+id/iv_lokasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/desc_iv_lokasi"
                    android:src="@drawable/iv_lokasi"
                    app:circularflow_radiusInDP="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_nama_lokasi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nama_lokasi"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins_semibold"
                    app:layout_constraintStart_toEndOf="@id/iv_lokasi"
                    app:layout_constraintTop_toTopOf="@id/iv_lokasi"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:id="@+id/tv_alamat_lokasi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_alamat_lokasi"
                    android:fontFamily="@font/poppins"
                    android:textSize="12sp"
                    android:textColor="@color/black"
                    android:alpha="0.7"
                    app:layout_constraintTop_toBottomOf="@id/tv_nama_lokasi"
                    app:layout_constraintStart_toStartOf="@id/tv_nama_lokasi"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="10dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>